css/site.css
@font-face {
	font-family: "Raleway";
	src: url("../fonts/Raleway.ttf");
}

@font-face {
	font-family: "PT Serif";
	src: url("../fonts/PT_Serif.ttf");
}

@font-face {
  font-family: 'FontAwesome';
  src: url('../fonts/fontawesome-webfont.eot?v=4.3.0');
  src: url('../fonts/fontawesome-webfont.eot?#iefix&v=4.3.0') format('embedded-opentype'), url('../fonts/fontawesome-webfont.woff2?v=4.3.0') format('woff2'), url('../fonts/fontawesome-webfont.woff?v=4.3.0') format('woff'), url('../fonts/fontawesome-webfont.ttf?v=4.3.0') format('truetype'), url('../fonts/fontawesome-webfont.svg?v=4.3.0#fontawesomeregular') format('svg');
  font-weight: normal;
  font-style: normal;
}

.fa {
  display: inline-block;
  font: normal normal normal 14px/1 FontAwesome;
  font-size: inherit;
  text-rendering: auto;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  transform: translate(0, 0);
}

.fa-facebook-official:before {
  content: "\f230";
}

.fa-google-plus-square:before {
  content: "\f0d4";
}

.fa-github-alt:before {
  content: "\f113";
}

body {
	margin: 0;
	padding: 0;
	font-family: 'Raleway';
	color: black;
	background: url(../img/paper.png) repeat 0 0;
}

html, body {
	width: 100%;
	height: 100%;
}

#header {
	width: 100%;
	height: auto;
}

#topmost {
	position: relative;
	width: auto;
	height: auto;
	overflow: hidden;
}

#header h1 {
	margin: 0.3em;
	padding: 0;
	font-size: 36pt;
	font-family: 'PT Serif';
	text-align: center;
	color: #654;
	text-shadow: 1px 1px 1px #999
}

#links {
	font-size: 16pt;
	position: absolute;
	right: 0;
	bottom: 0;
	width: auto;
	height: auto;
	padding: 0 10px;
	text-align: right;
}

#links a {
	text-decoration: none;
}

#links a, #links a:link, #links a:visited, #links a:focus, #links a:active {
	color: #321;
}

#links a:hover {
	color: #543;
}

#links a:active {
	color:  #AFA8A0;
}

#menu {
	clear: right;
	position: relative;
	width: auto;
	height: 40px;
	margin: 10px 0px;
	padding: 0;
	border-top: 2px solid #654;
	border-bottom: 2px solid #654;
	background-color: #AFA8A0;
	color: #321;
	list-style-type: none;
	border-collapse: collapse;
}

#menu li {
	width: auto;
	height: 20px;
	margin: 0;
	padding: 10px 15px;
	border-right: 2px solid #654;
	background-color: #AFA8A0;
	float: left;
}

#menu a, #menu a:link, #menu a:visited, #menu a:hover, #menu a:focus, #menu a:active {
	color: #321;
}

#menu a li:hover {
	background-color: #BFB8B0;
}

#menu .dropdown {
	position: relative;
}

#menu .submenu {
	margin: 0;
	padding: 0;
	position: absolute;
	top: 100%;
	left: -2px;
	display: none;
	overflow: hidden;
	border: 2px solid #654;
	border-bottom: none;
	background-color: #AFA8A0;
	list-style-type: none;
	z-index: 1;
}

#menu .submenu li {
	clear: left;
	width: 100%;
	border-right: none;
	border-bottom: 2px solid #654;
}

#menu .dropdown:hover > .submenu {
	display: block;
}

#content {
	margin: 10px;
}

